--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -1,3 +1,5 @@
 body {
-  background: linear-gradient(to right, #f2f2f2, #eaeaea);
+  background: linear-gradient(to right, #fcfcfc, #f2f2f2);
+  background-image: url("wallpaper.jpg");
+  color: #4c4c4c;
 }
