--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,21 +7,22 @@
 }
 
 #check-logo {
-  width: 60px;
-  height: 70px;
+  width: 50px;
+  height: 60px;
   align-self: center;
+  cursor: pointer;
 }
 
 #current-events {
   display: grid;
   justify-content: center;
-  grid-template: 750px / auto auto auto;
+  grid-template: 350px / auto auto auto;
   /*columns: 250px 3;*/
 }
 
 .App-header {
-  background: linear-gradient(to right, #2193b0, #6dd5ed);
-  height: 80px;
+  background: linear-gradient(to right, #3980b9, #6dd5fa, #b5ebff);
+  height: 70px;
   padding: 20px;
   color: white;
   display: flex;
