--- a/frontend/src/Event.css
+++ b/frontend/src/Event.css
@@ -1,7 +1,7 @@
 
 #Event {
 	width: 250px;
-	height: 700px;
+	height: 320px;
 	background-color: white;
 	text-align: center;
 	border-radius: 10px;
@@ -22,6 +22,11 @@
 	border-radius: 5px;
 }
 
+#Event-Body {
+	display: flex;
+	justify-content: center;
+}
+
 #Event-Name {
 	margin-top: 15px;
 	align-self: center;
@@ -33,9 +38,15 @@
 	align-self: flex-end;
 }
 
+#see-details-button {
+	margin-top: 25px;
+	align-self: flex-end;
+}
+
 #delete {
 	align-self: center;
 	padding-left: 30px;
+	cursor: pointer;
 }
 
 ul {
